open-sources/turso_dart/lib/src/ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:turso_dart/src/ffi.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<FFIResponse Function()>()
external FFIResponse init();

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Char>)>()
external FFIResponse connect_local(
  ffi.Pointer<ffi.Char> config_json,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Char>)>()
external FFIResponse connect_sync(
  ffi.Pointer<ffi.Char> config_json,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse database_connect(
  ffi.Pointer<ffi.Void> db_ptr,
);

@ffi.Native<FFIBoolResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIBoolResponse database_pull(
  ffi.Pointer<ffi.Void> db_ptr,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse database_push(
  ffi.Pointer<ffi.Void> db_ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void database_dispose(
  ffi.Pointer<ffi.Void> db_ptr,
);

@ffi.Native<
  FFIStringResponse Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external FFIStringResponse connection_query(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> sql,
  ffi.Pointer<ffi.Char> params_json,
);

@ffi.Native<
  FFIResponse Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external FFIResponse connection_execute(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> sql,
  ffi.Pointer<ffi.Char> params_json,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse connection_execute_batch(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> sql,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse connection_prepare(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> sql,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse connection_prepare_cached(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> sql,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse connection_prepare_execute_batch(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> sql,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse connection_transaction(
  ffi.Pointer<ffi.Void> conn_ptr,
  ffi.Pointer<ffi.Char> behavior,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void connection_dispose(
  ffi.Pointer<ffi.Void> conn_ptr,
);

@ffi.Native<
  FFIStringResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIStringResponse statement_query(
  ffi.Pointer<ffi.Void> stmt_ptr,
  ffi.Pointer<ffi.Char> params_json,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse statement_execute(
  ffi.Pointer<ffi.Void> stmt_ptr,
  ffi.Pointer<ffi.Char> params_json,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void statement_dispose(
  ffi.Pointer<ffi.Void> stmt_ptr,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse transaction_prepare(
  ffi.Pointer<ffi.Void> tx_ptr,
  ffi.Pointer<ffi.Char> sql,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse transaction_commit(
  ffi.Pointer<ffi.Void> tx_ptr,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse transaction_rollback(
  ffi.Pointer<ffi.Void> tx_ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void transaction_dispose(
  ffi.Pointer<ffi.Void> tx_ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void free_string(
  ffi.Pointer<ffi.Char> ptr,
);

final class FFIResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;

  external ffi.Pointer<ffi.Char> error_message;
}

final class FFIBoolResponse extends ffi.Struct {
  @ffi.Bool()
  external bool value;

  external ffi.Pointer<ffi.Char> error_message;
}

final class FFIStringResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> value;

  external ffi.Pointer<ffi.Char> error_message;
}
